Skala Pengukuran - Data Numerikal

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -180,6 +180,41 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>07. Skala Pengukuran - Data Numerikal</h2>\n",
+    "<h3><strong>Perbedaan Utama</strong></h3>\n",
+    "<table border=\"1\" style=\"border-collapse: collapse; width: 100%;\">\n",
+    "  <thead>\n",
+    "    <tr>\n",
+    "      <th style=\"text-align: left;\">Aspek</th>\n",
+    "      <th style=\"text-align: left;\">Skala Interval</th>\n",
+    "      <th style=\"text-align: left;\">Skala Rasio</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">Nol Absolut</td>\n",
+    "      <td style=\"text-align: left;\">Tidak ada (nol arbitrer)</td>\n",
+    "      <td style=\"text-align: left;\">Ada (nol menunjukkan ketiadaan)</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">Operasi Matematika</td>\n",
+    "      <td style=\"text-align: left;\">Penjumlahan, pengurangan valid</td>\n",
+    "      <td style=\"text-align: left;\">Semua operasi matematika valid</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">Contoh</td>\n",
+    "      <td style=\"text-align: left;\">Suhu Celsius, tahun</td>\n",
+    "      <td style=\"text-align: left;\">Berat, panjang, waktu, suhu Kelvin</td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>\n",
+    "<h4>Jadi perbedaan kunci antara skala interval dan rasio terletak pada <strong>keberadaan nol absolut</strong> dan validitas operasi matematika seperti perbandingan rasio</h4>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
