Package Statistika di Python

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -215,6 +215,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>08. Package Statistika di Python</h2>\n",
+    "<table border=\"1\" style=\"border-collapse: collapse; width: 100%;\">\n",
+    "  <thead>\n",
+    "    <tr>\n",
+    "      <th style=\"text-align: left;\">Library</th>\n",
+    "      <th style=\"text-align: left;\">Deskripsi</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">numpy</td>\n",
+    "      <td style=\"text-align: left;\">Digunakan untuk melakukan analisa data numerik dan perhitungan berbasis vektor atau matriks</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">pandas</td>\n",
+    "      <td style=\"text-align: left;\">Digunakan untuk melakukan pengolahan data tabular</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">matplotlib</td>\n",
+    "      <td style=\"text-align: left;\">Digunakan untuk melakukan plotting atau penggambaran grafik, dapat digunakan sebagai alat bantu dalam analisa data</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">statsmodels</td>\n",
+    "      <td style=\"text-align: left;\">Digunakan untuk melakukan uji hipotesa, eksplorasi data maupun pemodelan statistika</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">scipy</td>\n",
+    "      <td style=\"text-align: left;\">Digunakan untuk uji statistika, juga dapat digunakan untuk melakukan pemodelan statistika</td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
