Pengenalan Numpy dan Pandas

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -252,7 +252,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h2>09. Pengenalan Numpy dan Pandas</h2>\n",
+    "<table border=\"1\" style=\"border-collapse: collapse; width: 100%;\">\n",
+    "  <thead>\n",
+    "    <tr>\n",
+    "      <th style=\"text-align: left;\">Library</th>\n",
+    "      <th style=\"text-align: left;\">Deskripsi</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">numpy</td>\n",
+    "      <td style=\"text-align: left;\">\n",
+    "        Digunakan untuk manipulasi array atau vektor, termasuk operasi berbasis matriks dan multidimensi (misalnya data gambar dengan skema warna RGB).\n",
+    "      </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td style=\"text-align: left;\">pandas</td>\n",
+    "      <td style=\"text-align: left;\">\n",
+    "        Digunakan untuk analisis data tabular (data wrangling), seperti membaca data dari format <code>csv</code>, <code>xlsx</code>, dan lainnya, serta transformasi nilai, encoding, dan normalisasi. Pandas menggunakan numpy sebagai back-end.\n",
+    "      </td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>\n"
+   ]
   }
  ],
  "metadata": {
