--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,11 +298,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>11. Load Dataset</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# memuat data bernama 'dataset_statistics.csv' dan memasukannya ke dalam 'raw_data'\n",
+    "raw_data = pd.read_csv(\"https://storage.googleapis.com/dqlab-dataset/dataset_statistic.csv\", sep=';')\n",
+    "\n",
+    "# simpan data ke dalam lokal drive\n",
+    "raw_data.to_csv('file_csv\\dataset_statistic.csv', index=False)\n"
+   ]
   }
  ],
  "metadata": {
