--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -306,16 +306,359 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# memuat data bernama 'dataset_statistics.csv' dan memasukannya ke dalam 'raw_data'\n",
-    "raw_data = pd.read_csv(\"https://storage.googleapis.com/dqlab-dataset/dataset_statistic.csv\", sep=';')\n",
-    "\n",
-    "# simpan data ke dalam lokal drive\n",
-    "raw_data.to_csv('file_csv\\dataset_statistic.csv', index=False)\n"
+    "raw_data = pd.read_csv(\"https://storage.googleapis.com/dqlab-dataset/dataset_statistic.csv\", sep=';')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>12. Inspeksi Data</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 data pada baris pertama:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID Pelanggan</th>\n",
+       "      <th>Nama</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Pendapatan</th>\n",
+       "      <th>Produk</th>\n",
+       "      <th>Harga</th>\n",
+       "      <th>Jumlah</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Tingkat Kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Arif</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Dian</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Dinda</td>\n",
+       "      <td>2</td>\n",
+       "      <td>950000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>750000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Fajar</td>\n",
+       "      <td>1</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Ika</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Ilham</td>\n",
+       "      <td>1</td>\n",
+       "      <td>800000</td>\n",
+       "      <td>B</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Indra</td>\n",
+       "      <td>1</td>\n",
+       "      <td>950000</td>\n",
+       "      <td>B</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>750000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Kartika</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1100000</td>\n",
+       "      <td>E</td>\n",
+       "      <td>300000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Lestari</td>\n",
+       "      <td>2</td>\n",
+       "      <td>800000</td>\n",
+       "      <td>E</td>\n",
+       "      <td>300000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Lia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1700000</td>\n",
+       "      <td>E</td>\n",
+       "      <td>300000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1500000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID Pelanggan     Nama  Jenis Kelamin  Pendapatan Produk   Harga  Jumlah   \\\n",
+       "0             1     Arif              1      600000      A  100000        4   \n",
+       "1             2     Dian              2     1200000      D  250000        4   \n",
+       "2             3    Dinda              2      950000      D  250000        3   \n",
+       "3             4    Fajar              1      400000      A  100000        2   \n",
+       "4             5      Ika              2     1200000      D  250000        4   \n",
+       "5             6    Ilham              1      800000      B  150000        4   \n",
+       "6             7    Indra              1      950000      B  150000        5   \n",
+       "7             8  Kartika              2     1100000      E  300000        3   \n",
+       "8             9  Lestari              2      800000      E  300000        2   \n",
+       "9            10      Lia              2     1700000      E  300000        5   \n",
+       "\n",
+       "     Total  Tingkat Kepuasan  \n",
+       "0   400000                 2  \n",
+       "1  1000000                 2  \n",
+       "2   750000                 3  \n",
+       "3   200000                 3  \n",
+       "4  1000000                 2  \n",
+       "5   600000                 3  \n",
+       "6   750000                 1  \n",
+       "7   900000                 3  \n",
+       "8   600000                 1  \n",
+       "9  1500000                 1  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 data pada baris terakhir:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID Pelanggan</th>\n",
+       "      <th>Nama</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Pendapatan</th>\n",
+       "      <th>Produk</th>\n",
+       "      <th>Harga</th>\n",
+       "      <th>Jumlah</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Tingkat Kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Rini</td>\n",
+       "      <td>2</td>\n",
+       "      <td>800000</td>\n",
+       "      <td>B</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Rizki</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Sari</td>\n",
+       "      <td>2</td>\n",
+       "      <td>700000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Tyas</td>\n",
+       "      <td>2</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Wahyu</td>\n",
+       "      <td>1</td>\n",
+       "      <td>800000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ID Pelanggan   Nama  Jenis Kelamin  Pendapatan Produk   Harga  Jumlah   \\\n",
+       "15            16   Rini              2      800000      B  150000        4   \n",
+       "16            17  Rizki              1     1200000      C  200000        5   \n",
+       "17            18   Sari              2      700000      D  250000        2   \n",
+       "18            19   Tyas              2      600000      A  100000        4   \n",
+       "19            20  Wahyu              1      800000      C  200000        3   \n",
+       "\n",
+       "      Total  Tingkat Kepuasan  \n",
+       "15   600000                 1  \n",
+       "16  1000000                 3  \n",
+       "17   500000                 1  \n",
+       "18   400000                 3  \n",
+       "19   600000                 1  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Melihat 10 data pada baris pertama\n",
+    "print(f\"10 data pada baris pertama:\")\n",
+    "display(raw_data.head(10))\n",
+    "\n",
+    "# Melihat 5 data pada baris terakhir\n",
+    "print(f\"5 data pada baris terakhir:\")\n",
+    "display(raw_data.tail(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
