--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -654,6 +654,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>13. Metode Shape</h2>\n",
+    "<h3>Pertanyaan ? <strong>Berapa banyak baris data dan fitur yang dataset punya ?</strong></h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensi dari raw_data:\n",
+      "raw data terdiri dari 20 baris dan 9 kolom\n",
+      "Jumlah data:\n",
+      "Jumlah data adalah 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# melihat dimensi dari raw_data\n",
+    "print(f\"Dimensi dari raw_data:\")\n",
+    "print(f\"raw data terdiri dari {raw_data.shape[0]} baris dan {raw_data.shape[1]} kolom\")\n",
+    "\n",
+    "# mengambil jumlah data\n",
+    "print(f\"Jumlah data:\")\n",
+    "print(f\"Jumlah data adalah {raw_data.shape[0]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
