--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -1093,6 +1093,209 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>16. Metode Describe</h2>\n",
+    "<h4>Pertanyaan ? bagaimana ringkasan <code>statistika deskriptif</code> dataset <code>?</code></h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "menampilkan statistika deskriptif dataset: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID Pelanggan</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Pendapatan</th>\n",
+       "      <th>Harga</th>\n",
+       "      <th>Jumlah</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Tingkat Kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1160000.0</td>\n",
+       "      <td>197500.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>710000.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1282842.0</td>\n",
+       "      <td>69727.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>333877.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>400000.0</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>200000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>675000.0</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>475000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>875000.0</td>\n",
+       "      <td>200000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>675000.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1125000.0</td>\n",
+       "      <td>250000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>925000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6450000.0</td>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1500000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID Pelanggan  Jenis Kelamin  Pendapatan     Harga  Jumlah       Total  \\\n",
+       "count          20.0           20.0        20.0      20.0     20.0       20.0   \n",
+       "mean           10.0            2.0   1160000.0  197500.0      4.0   710000.0   \n",
+       "std             6.0            0.0   1282842.0   69727.0      1.0   333877.0   \n",
+       "min             1.0            1.0    400000.0  100000.0      1.0   200000.0   \n",
+       "25%             6.0            1.0    675000.0  150000.0      3.0   475000.0   \n",
+       "50%            10.0            2.0    875000.0  200000.0      4.0   675000.0   \n",
+       "75%            15.0            2.0   1125000.0  250000.0      4.0   925000.0   \n",
+       "max            20.0            2.0   6450000.0  300000.0      5.0  1500000.0   \n",
+       "\n",
+       "       Tingkat Kepuasan  \n",
+       "count              20.0  \n",
+       "mean                2.0  \n",
+       "std                 1.0  \n",
+       "min                 1.0  \n",
+       "25%                 1.0  \n",
+       "50%                 2.0  \n",
+       "75%                 3.0  \n",
+       "max                 3.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "menampilkan nilai maksimum dari tiap kolom: \n",
+      "ID Pelanggan             20\n",
+      "Nama                  Wahyu\n",
+      "Jenis Kelamin             2\n",
+      "Pendapatan          6450000\n",
+      "Produk                    E\n",
+      "Harga                300000\n",
+      "Jumlah                    5\n",
+      "Total               1500000\n",
+      "Tingkat Kepuasan          3\n",
+      "dtype: object\n",
+      "\n",
+      "menampilkan nilai maksimum kolom harga: \n",
+      "300000\n",
+      "\n",
+      "menampilkan nilai minimum kolom harga: \n",
+      "100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# menampilkan statistika deskriptif dataset\n",
+    "print(f\"menampilkan statistika deskriptif dataset: \")\n",
+    "display(raw_data.describe().round())\n",
+    "\n",
+    "# mencari nilai maksimum dari tiap kolom\n",
+    "print(f\"\\nmenampilkan nilai maksimum dari tiap kolom: \")\n",
+    "print(raw_data.max())\n",
+    "\n",
+    "# mencari nilai maksimum kolom harga\n",
+    "print(f\"\\nmenampilkan nilai maksimum kolom harga: \")\n",
+    "print(raw_data[\"Harga\"].max())\n",
+    "\n",
+    "# mencari nilai minimum dari kolom harga\n",
+    "print(f\"\\nmenampilkan nilai minimum kolom harga: \")\n",
+    "print(raw_data[\"Harga\"].min())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
