--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1296,11 +1296,245 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>17. Metode Sum</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan jumlah dari semua baris: \n",
+      "ID Pelanggan                                                      210\n",
+      "Nama                ArifDianDindaFajarIkaIlhamIndraKartikaLestariL...\n",
+      "Jenis Kelamin                                                      34\n",
+      "Pendapatan                                                   23200000\n",
+      "Produk                                           ADDADBBEEEABCDCBCDAC\n",
+      "Harga                                                         3950000\n",
+      "Jumlah                                                             73\n",
+      "Total                                                        14200000\n",
+      "Tingkat Kepuasan                                                   41\n",
+      "dtype: object\n",
+      "\n",
+      "Menampilkan jumlah dari semua kolom bertipe data numerik saja\n",
+      "ID Pelanggan             210\n",
+      "Jenis Kelamin             34\n",
+      "Pendapatan          23200000\n",
+      "Harga                3950000\n",
+      "Jumlah                    73\n",
+      "Total               14200000\n",
+      "Tingkat Kepuasan          41\n",
+      "dtype: int64\n",
+      "\n",
+      "Menampilkan jumlah dari  kolom Harga dan Pendapatan\n",
+      "Harga          3950000\n",
+      "Pendapatan    23200000\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# menghitung jumlah dari semua baris\n",
+    "print(f\"Menampilkan jumlah dari semua baris: \")\n",
+    "print(raw_data.sum())\n",
+    "\n",
+    "# menghitung jumlah dari semua kolom bertipe data numerik saja\n",
+    "print(f\"\\nMenampilkan jumlah dari semua kolom bertipe data numerik saja\")\n",
+    "print(raw_data.sum(numeric_only=True))\n",
+    "\n",
+    "# mengitung jumlah dari kolom \"Harga\" dan \"Pendapatan\"\n",
+    "print(f\"\\nMenampilkan jumlah dari  kolom Harga dan Pendapatan\")\n",
+    "print(raw_data[[\"Harga\",\"Pendapatan\"]].sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>18. Manipulasi Dataframe Memilih Kolom dan Baris</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan kolom Pendapatan saja: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pendapatan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pendapatan\n",
+       "0      600000\n",
+       "1     1200000\n",
+       "2      950000\n",
+       "3      400000\n",
+       "4     1200000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan kolom Jenis Kelamin dan Pendapatan\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Pendapatan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Jenis Kelamin  Pendapatan\n",
+       "0              1      600000\n",
+       "1              2     1200000\n",
+       "2              2      950000\n",
+       "3              1      400000\n",
+       "4              2     1200000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# memilih kolom \"Pendapatan\" saja\n",
+    "print(f\"Menampilkan kolom Pendapatan saja: \")\n",
+    "display(raw_data[[\"Pendapatan\"]].head())\n",
+    "\n",
+    "# memilih kolom \"Jenis Kelamin\" dan \"Pendapatan\"\n",
+    "print(f\"Menampilkan kolom Jenis Kelamin dan Pendapatan\")\n",
+    "display(raw_data[[\"Jenis Kelamin\",\"Pendapatan\"]].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>19. Metode Loc</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Mengambil baris pertama (index - 0) sampai baris ke - 9 (index - 9) yaitu sebanyak 10 baris\n",
+    "print(f\"Menampilkan baris \")"
+   ]
   }
  ],
  "metadata": {
