Ukuran Pusat Data (Measures of Central Tendency)

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2194,6 +2194,18 @@
     "  <li>datafarme.loc[m:n] -> menampilkan baris dataframe dari <code>index-m</code> sampai <code>index-n</code> </li>\n",
     "  <li>datafarme.loc[[m,n,p]] -> menampilkan baris dataframe dari <code>index-m</code> & <code>index-n</code> & <code>index-p</code> </li>\n",
     "  <li>datafarme[m:n] -> menampilkan baris dataframe dari <code>index-m</code> sampai <code>index-n-1</code> </li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>20. Ukuran Pusat (Measures of Central Tendency)</h2>\n",
+    "<ul>\n",
+    "  <li><code>Mean</code> : Rata - rata</li>\n",
+    "  <li><code>Median</code> : Nilai tengah</li>\n",
+    "  <li><code>Modus</code> : Nilai yang sering muncul</li>\n",
     "</ul>"
    ]
   },
