Nilai Rata Rata Dataframe (Mean)

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -2212,6 +2212,262 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>21. Rata - Rata (Mean)</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan data  untuk Produk A\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID Pelanggan</th>\n",
+       "      <th>Nama</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Pendapatan</th>\n",
+       "      <th>Produk</th>\n",
+       "      <th>Harga</th>\n",
+       "      <th>Jumlah</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Tingkat Kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Arif</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Fajar</td>\n",
+       "      <td>1</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>2</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Tyas</td>\n",
+       "      <td>2</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ID Pelanggan   Nama  Jenis Kelamin  Pendapatan Produk   Harga  Jumlah   \\\n",
+       "0              1   Arif              1      600000      A  100000        4   \n",
+       "3              4  Fajar              1      400000      A  100000        2   \n",
+       "10            11  Maria              2      600000      A  100000        4   \n",
+       "18            19   Tyas              2      600000      A  100000        4   \n",
+       "\n",
+       "     Total  Tingkat Kepuasan  \n",
+       "0   400000                 2  \n",
+       "3   200000                 3  \n",
+       "10  400000                 3  \n",
+       "18  400000                 3  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID Pelanggan</th>\n",
+       "      <th>Nama</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Pendapatan</th>\n",
+       "      <th>Produk</th>\n",
+       "      <th>Harga</th>\n",
+       "      <th>Jumlah</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Tingkat Kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Arif</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Fajar</td>\n",
+       "      <td>1</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>2</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Tyas</td>\n",
+       "      <td>2</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ID Pelanggan   Nama  Jenis Kelamin  Pendapatan Produk   Harga  Jumlah   \\\n",
+       "0              1   Arif              1      600000      A  100000        4   \n",
+       "3              4  Fajar              1      400000      A  100000        2   \n",
+       "10            11  Maria              2      600000      A  100000        4   \n",
+       "18            19   Tyas              2      600000      A  100000        4   \n",
+       "\n",
+       "     Total  Tingkat Kepuasan  \n",
+       "0   400000                 2  \n",
+       "3   200000                 3  \n",
+       "10  400000                 3  \n",
+       "18  400000                 3  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Menampilkan rata-rata Pendapatan pada Produk A: \n",
+      "Nilai mean dari Pendapatan Produk A = 550000.0\n",
+      "\n",
+      "Menampilan rata-rata Pendapatan pada Produk A: \n",
+      "Nilai mean dari Pendapatan Produk A = 550000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mengambil hanya data untuk Produk A\n",
+    "print(f\"Menampilkan data  untuk Produk A\")\n",
+    "display(raw_data[raw_data[\"Produk\"] == \"A\"].head())\n",
+    "\n",
+    "# membuat variabel produk_A\n",
+    "produk_A = raw_data[raw_data[\"Produk\"] == \"A\"]\n",
+    "display(produk_A.head())\n",
+    "\n",
+    "# menampilkan rata-rata Pendapatan pada Produk A menggunakan method .mean()\n",
+    "print(f\"\\nMenampilkan rata-rata Pendapatan pada Produk A: \")\n",
+    "print(f\"Nilai mean dari Pendapatan Produk A = {produk_A['Pendapatan'].mean()}\")\n",
+    "\n",
+    "# menampilkan rata-rata Pendapatan pada Produk A menggunakan menthod .mean() pada numpy array\n",
+    "print(f\"\\nMenampilan rata-rata Pendapatan pada Produk A: \")\n",
+    "print(f\"Nilai mean dari Pendapatan Produk A = {np.mean(produk_A['Pendapatan'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
