--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2461,6 +2461,168 @@
     "# menampilkan rata-rata Pendapatan pada Produk A menggunakan menthod .mean() pada numpy array\n",
     "print(f\"\\nMenampilan rata-rata Pendapatan pada Produk A: \")\n",
     "print(f\"Nilai mean dari Pendapatan Produk A = {np.mean(produk_A['Pendapatan'])}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>22. Median</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan 5 raw data teratas: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID Pelanggan</th>\n",
+       "      <th>Nama</th>\n",
+       "      <th>Jenis Kelamin</th>\n",
+       "      <th>Pendapatan</th>\n",
+       "      <th>Produk</th>\n",
+       "      <th>Harga</th>\n",
+       "      <th>Jumlah</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Tingkat Kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Arif</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Dian</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Dinda</td>\n",
+       "      <td>2</td>\n",
+       "      <td>950000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>750000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Fajar</td>\n",
+       "      <td>1</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Ika</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>D</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID Pelanggan   Nama  Jenis Kelamin  Pendapatan Produk   Harga  Jumlah   \\\n",
+       "0             1   Arif              1      600000      A  100000        4   \n",
+       "1             2   Dian              2     1200000      D  250000        4   \n",
+       "2             3  Dinda              2      950000      D  250000        3   \n",
+       "3             4  Fajar              1      400000      A  100000        2   \n",
+       "4             5    Ika              2     1200000      D  250000        4   \n",
+       "\n",
+       "     Total  Tingkat Kepuasan  \n",
+       "0   400000                 2  \n",
+       "1  1000000                 2  \n",
+       "2   750000                 3  \n",
+       "3   200000                 3  \n",
+       "4  1000000                 2  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Menampilkan nilai median dari data Pendapatan Produk A: \n",
+      "Nilai Median dari data Pendapatan Produk A = 600000.0\n",
+      "\n",
+      "Menampilkan nilai median dari data Pendapatan Produk A menggunakan numpy: \n",
+      "Nilai Median dari data Pendapatan Produk A = 600000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# menampilkan raw data\n",
+    "print(f\"Menampilkan 5 raw data teratas: \")\n",
+    "display(raw_data.head())\n",
+    "\n",
+    "# menghitung nilai median dari data Pendapatan Produk A\n",
+    "print(f\"\\nMenampilkan nilai median dari data Pendapatan Produk A: \")\n",
+    "print(f\"Nilai Median dari data Pendapatan Produk A = {produk_A['Pendapatan'].median()}\")\n",
+    "\n",
+    "# menghitung nilai media dari data Pendapatan Produk A\n",
+    "print(f\"\\nMenampilkan nilai median dari data Pendapatan Produk A menggunakan numpy: \")\n",
+    "print(f\"Nilai Median dari data Pendapatan Produk A = {np.median(produk_A['Pendapatan'])}\")"
    ]
   },
   {
