Modus Untuk Masing - Masing Produk

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -2626,6 +2626,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>23. Modus</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan jumlah dari masing-masing produk: \n",
+      "Produk\n",
+      "D    5\n",
+      "A    4\n",
+      "B    4\n",
+      "C    4\n",
+      "E    3\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Menampikan jumlah dari masing-masing produk: \n",
+      "0    D\n",
+      "Name: Produk, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# melihat jumlah dari masing-masing produk\n",
+    "print(f\"Menampilkan jumlah dari masing-masing produk: \")\n",
+    "print(raw_data[\"Produk\"].value_counts())\n",
+    "\n",
+    "# melihat jumlah dari masing-masing produk\n",
+    "print(f\"\\nMenampikan jumlah dari masing-masing produk: \")\n",
+    "print(raw_data[\"Produk\"].mode())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
